// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Table renders correctly 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Column A
      </th>
      <th>
        Column B
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Components : Common: Table renders correctly 2`] = `
<table
  className="table"
  data-tablesaw-minimap={true}
  data-tablesaw-mode="columntoggle"
  data-tablesaw-sortable={true}
>
  <thead>
    <tr>
      <th>
        Column A
      </th>
      <th>
        Column B
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
    <tr>
      <td>
        Item A
      </td>
      <td>
        Item B
      </td>
    </tr>
  </tbody>
</table>
`;
